# stalwart-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: cursor-config.json  server-config.toml
src/: admin.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  notifications.rs  rate_limit.rs
src/jmap/: mail.rs  mod.rs
src/mcp/: mod.rs  prompts.rs  resources.rs
src/mcp/tools/: mail.rs
tests/: integration_mail.rs
