[package]
name = "stalwart-mcp"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
description = "MCP server for Stalwart Mail Server — privacy-preserving AI access to mail, calendar, and contacts via JMAP"
repository = "https://github.com/308/stalwart-mcp"
keywords = ["mcp", "stalwart", "jmap", "mail", "ai"]
categories = ["email", "web-programming"]

[dependencies]
rmcp = { version = "1.4", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
jmap-client = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
figment = { version = "0.10", features = ["toml", "env"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
futures = "0.3"
reqwest = { version = "0.13.2", features = ["stream"] }
async-stream = "0.3.6"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.10.1"
